--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,34 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Example App</title>
-</head>
-<body>
+  </head>
 
-    {{{body}}}
+  <body>
+    <div class="wrapper">
+      <header>
+        <nav>
+          {{!-- {{#if loggedIn}} --}}
+          <a href="/home">Home</a>
+          <a href="/dashboard">Dashboard</a>
+          <a href="/logout">Logout</a>
+          {{!-- {{else}} --}}
+          <a href="/login">Login</a>
+          {{!-- {{/if}} --}}
+        </nav>
+        <h1>
+          Tech Blog
+        </h1>
 
-</body>
+      </header>
+      <main>
+        {{{body}}}
+      </main>
+    </div>
+
+    {{!-- {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}} --}}
+  </body>
+
 </html>
