--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,20 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>The Tech Blog</title>
 </head>
 <body>
-
+  <div class="wrapper">
+    <header>
+      <nav>
+        <a href="/dashboard">Home</a>
+        <a href="/dashboard">Dashboard</a>
+        <a href="/login">Login</a>
+      </nav>
+            <h1>
+        <a href="/">The Tech Blog</a>
+      </h1>
+    </header>
     {{{body}}}
 
 </body>
