Implemented the dashboard page and a route for it

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,8 +9,9 @@
   </div>
   <div>
     <button type="submit">login</button>
-    <button type="submit">signup</button>
   </div>
 </form>
+
+<button id= "signupButton" type="click">signup</button>
 
 <script src="/javascript/login.js"></script>
