--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,12 +8,12 @@
       <header>
         <nav>
           <a href="/">Home</a>
-          {{!-- {{#if loggedIn}} --}}
-          <a href="/dashboard">Dashboard</a>
-          <a href="/logout">Logout</a>
-          {{!-- {{else}} --}}
-          <a href="/login">Login</a>
-          {{!-- {{/if}} --}}
+          {{#if loggedIn}}
+            <a href="/dashboard">Dashboard</a>
+            <a href="/logout" id="logout">Logout</a>
+          {{else}}
+            <a href="/login">Login</a>
+          {{/if}}
         </nav>
         <h1>
           <a href="/">The Tech Blog</a>
@@ -24,9 +24,9 @@
       </main>
     </div>
 
-    {{!-- {{#if loggedIn}}
-  <script src="/javascript/logout.js"></script>
-  {{/if}} --}}
+    {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+    {{/if}}
   </body>
 
 </html>
