--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,8 +7,8 @@
       <input type="text" id="post-title" name="post-title" />
     </div>
     <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
+      <label for="post-contents">Contents</label>
+      <input id="post-contents" name="post-contents" />
     </div>
     <button type="submit" class="btn">Create</button>
   </form>
@@ -34,3 +34,5 @@
   </ol>
 </section>
 {{/if}}
+
+<script src="/javascript/add-post.js"></script>
